k8s/infra/flux-operator/manifests/2-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: flux-ui-oidc
  namespace: flux-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-operator-flux-operator
  oidc:
    provider:
      issuer: https://idp.tale.me
    clientID: c87cccfc-0696-4478-9f25-1a7076314160
    clientSecret:
      name: flux-ui-oidc-secret
    redirectURL: https://flux.tale.me/oauth2/callback
    logoutPath: /logout
